Bump to 2.541.x baseline (#530)